Fix typos in doc files
Change-Id: Ifd6bd96676b6d315afd87a2b6fdbfa77979c9fa0
Signed-off-by: Fred Rolland <frolland@redhat.com>

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -16,7 +16,7 @@ pages:
   - CI:
     - Jenkins: CI/jenkins_jobs.markdown
     - 'Verifying A Patch': CI/developers_info.markdown
-    - 'Standart CI': CI/standard_ci_and_ost.markdown
+    - 'Standard CI': CI/standard_ci_and_ost.markdown
   - 'How It Works':
     - 'Packages Management': how-it-works/package_management.markdown
     - 'LagoInitFile Templating': how-it-works/jinja_templates_in_lagoinitfile.markdown
