upgrade: Update the CentOS image
Following 489f1feb160033dfed52be4790aaea6405550723

Change-Id: Ieeb0d6250293a1b0fd57c4126c4fd4241e078257
Signed-off-by: gbenhaim <galbh2@gmail.com>

--- a/upgrade-from-prevrelease-suite-4.2/vars/main.yml
+++ b/upgrade-from-prevrelease-suite-4.2/vars/main.yml
@@ -1,6 +1,6 @@
 templates:
-  engine: el7.4-base
-  host: el7.4-base
+  engine: el7.4-base-1
+  host: el7.4-base-1
 hostCount: 1
 install_storage_with_lago_deploy: true
 install_ovirt_host: false
