he: Update the CentOS image
Following 489f1feb160033dfed52be4790aaea6405550723

Change-Id: I5d44d2726cdfc1e5ae89f9f76528a4f6b13b7d18
Signed-off-by: gbenhaim <galbh2@gmail.com>

--- a/common/init-configs/1_hosted_engine_4.1_2_centos7_hosts.yml
+++ b/common/init-configs/1_hosted_engine_4.1_2_centos7_hosts.yml
@@ -20,7 +20,7 @@ domains:
     nics:
       - net: __LAGO_NET__
     disks:
-      - template_name: el7.4-base
+      - template_name: el7.4-base-1
         type: template
         name: root
         dev: vda
@@ -58,7 +58,7 @@ domains:
     nics:
       - net: __LAGO_NET__
     disks:
-      - template_name: el7.4-base
+      - template_name: el7.4-base-1
         type: template
         name: root
         dev: vda
@@ -86,7 +86,7 @@ domains:
     nics:
       - net: __LAGO_NET__
     disks:
-      - template_name: el7.4-base
+      - template_name: el7.4-base-1
         type: template
         name: root
         dev: vda
