ng: Update the CentOS image
Following 489f1feb160033dfed52be4790aaea6405550723

Change-Id: I243430c1e843fcd4c474356b96faa0cc42b44d09
Signed-off-by: gbenhaim <galbh2@gmail.com>

--- a/common/init-configs/1_appliance_2_nodes_el7.yml
+++ b/common/init-configs/1_appliance_2_nodes_el7.yml
@@ -26,7 +26,7 @@ domains:
     nics:
       - net: __LAGO_NET__
     disks:
-      - template_name: el7.4-base
+      - template_name: el7.4-base-1
         type: template
         name: root
         dev: vda
@@ -46,7 +46,7 @@ domains:
     nics:
       - net: __LAGO_NET__
     disks:
-      - template_name: el7.4-base
+      - template_name: el7.4-base-1
         type: template
         name: root
         dev: vda
