hc: Update the CentOS image
Following 489f1feb160033dfed52be4790aaea6405550723

Change-Id: I835d65646cfd4bb9b97bb47a56869c99bb48a00c
Signed-off-by: gbenhaim <galbh2@gmail.com>

--- a/hc-basic-suite-4.1/LagoInitFile.in
+++ b/hc-basic-suite-4.1/LagoInitFile.in
@@ -18,7 +18,7 @@ domains:
     nics:
       - net: __LAGO_NET_MANAGEMENT__
     disks:
-      - template_name: el7-base
+      - template_name: el7.4-base-1
         type: template
         name: root
         dev: vda
@@ -50,7 +50,7 @@ domains:
     nics:
       - net: __LAGO_NET_MANAGEMENT__
     disks:
-      - template_name: el7-base
+      - template_name: el7.4-base-1
         type: template
         name: root
         dev: vda
@@ -82,7 +82,7 @@ domains:
     nics:
       - net: __LAGO_NET_MANAGEMENT__
     disks:
-      - template_name: el7-base
+      - template_name: el7.4-base-1
         type: template
         name: root
         dev: vda
