Verify system_requirements
Verify that the system has the needed resource
in order to run the SUITE.

Requirements should be declared in each suite's vars/main.yml file.

Change-Id: I70c37a0511729cceb0e377731f31e945fd374205
Signed-off-by: gbenhaim <galbh2@gmail.com>

--- a/basic-suite-master/vars/main.yml
+++ b/basic-suite-master/vars/main.yml
@@ -4,3 +4,5 @@ templates:
 hostCount: 2
 install_storage_with_lago_deploy: false
 install_ovirt_host: true
+system_requirements:
+  disk_space_gb: 15
