--- a/common/init-configs/1_hosted_engine_4.1_2_centos7_hosts.yml
+++ b/common/init-configs/1_hosted_engine_4.1_2_centos7_hosts.yml
@@ -1,24 +1,24 @@
 domains:
-  __ENGINE__:
+  lago-{{ env.suite_name }}-engine:
     vm-provider: ssh
     vm-type: ovirt-engine
     distro: el7
     service_provider: systemd
     ssh-password: 123456
     nics:
-      - net: __LAGO_NET__
+      - net: lago-{{ env.suite_name }}-net-management
         ip: 192.168.200.99
     metadata:
       ovirt-engine-password: 123
 
-  __STORAGE__:
+  lago-{{ env.suite_name }}-storage:
     memory: 750
     distro: el7
     vcpu: 1
     cpu: 1
     service_provider: systemd
     nics:
-      - net: __LAGO_NET__
+      - net: lago-{{ env.suite_name }}-net-management
     disks:
       - template_name: el7.4-base-1
         type: template
@@ -49,14 +49,15 @@ domains:
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_storage_unified_el7.sh
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_storage_unified_he_extra_el7.sh
 
-  __HOST0__:
+{%- for i in range(hostCount) %}
+  lago-{{ env.suite_name }}-host-{{ i }}:
     vm-type: ovirt-host
     distro: el7
     service_provider: systemd
     memory: 4720
     cpu_model: SandyBridge
     nics:
-      - net: __LAGO_NET__
+      - net: lago-{{ env.suite_name }}-net-management
     disks:
       - template_name: el7.4-base-1
         type: template
@@ -75,38 +76,15 @@ domains:
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/add_local_repo.sh
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/add_tmp_part_el7.sh
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_host_el7.sh
+        {% if loop.first -%}
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/install_he_4.sh
-
-  __HOST1__:
-    vm-type: ovirt-host
-    distro: el7
-    service_provider: systemd
-    memory: 4720
-    cpu_model: SandyBridge
-    nics:
-      - net: __LAGO_NET__
-    disks:
-      - template_name: el7.4-base-1
-        type: template
-        name: root
-        dev: vda
-        format: qcow2
-      - name: tmp
-        size: 80G
-        type: empty
-        dev: sda
-        format: qcow2
-    metadata:
-      ovirt-capabilities:
-        - snapshot-live-merge
-      deploy-scripts:
-        - $LAGO_INITFILE_PATH/../common/deploy-scripts/add_local_repo.sh
-        - $LAGO_INITFILE_PATH/../common/deploy-scripts/add_tmp_part_el7.sh
-        - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_host_el7.sh
+        {% else -%}
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/install_he_4_additional_host.sh
+        {%- endif %}
+{%- endfor %}
 
 nets:
-  __LAGO_NET__:
+  lago-{{ env.suite_name }}-net-management:
     type: nat
     dhcp:
       start: 100
