he: Take Lago template name from the vars file
Part of b7e31eb4c0f6a0b3e8fc69d8aaa2ee3971246816

Change-Id: I9daeffa240f2b3c6afa69809f5bfcf85676c9898
Signed-off-by: gbenhaim <galbh2@gmail.com>

--- a/common/init-configs/1_hosted_engine_4.1_2_centos7_hosts.yml
+++ b/common/init-configs/1_hosted_engine_4.1_2_centos7_hosts.yml
@@ -20,7 +20,7 @@ domains:
     nics:
       - net: lago-{{ env.suite_name }}-net-management
     disks:
-      - template_name: el7.4-base-1
+      - template_name: {{ templates.storage }}
         type: template
         name: root
         dev: vda
@@ -59,7 +59,7 @@ domains:
     nics:
       - net: lago-{{ env.suite_name }}-net-management
     disks:
-      - template_name: el7.4-base-1
+      - template_name: {{ templates.host }}
         type: template
         name: root
         dev: vda
