network: add multiple networks connected by single router
This patch adds multiple networks connected by a single
router. Multiple networks will be needed to validate
that network connectivity over the router works correctly.

The current network topology created by the patch looks
as follows:

    NET 12
      |
      |
    ROUTER0
   /     \
  /       \
NET10    NET11

The following patch should test connectivity between all
networks in the topology.
Following patches will add another router and network
connected to NET12.


Change-Id: I599bf388fda9c50792e18726bfdd142f39d0a317
Signed-off-by: Marcin Mirecki <mmirecki@redhat.com>

--- a/network-suite-master/ansible/roles/cleanup-ovn-entities/tasks/main.yml
+++ b/network-suite-master/ansible/roles/cleanup-ovn-entities/tasks/main.yml
@@ -7,20 +7,56 @@
     state: absent
     name: router0
 
-- name: Remove simple_net_subnet
-  os_subnet:
-    cloud: "{{ cloud_name }}"
-    state: absent
-    name: simple_net_subnet
-
-- name: Remove port simple_net_port2
+- name: Remove port net10_port1
   os_port:
     cloud: "{{ cloud_name }}"
     state: absent
-    name: simple_net_port2
+    name: net10_port1
 
-- name: Remove simple network
+- name: Remove net10_subnet1
+  os_subnet:
+    cloud: "{{ cloud_name }}"
+    state: absent
+    name: net10_subnet1
+
+- name: Remove network 10
   os_network:
     cloud: "{{ cloud_name }}"
     state: absent
-    name: simple_net
+    name: net10
+
+- name: Remove port net11_port1
+  os_port:
+    cloud: "{{ cloud_name }}"
+    state: absent
+    name: net11_port1
+
+- name: Remove net11_subnet1
+  os_subnet:
+    cloud: "{{ cloud_name }}"
+    state: absent
+    name: net11_subnet1
+
+- name: Remove network 2
+  os_network:
+    cloud: "{{ cloud_name }}"
+    state: absent
+    name: net11
+
+- name: Remove port net12_port1
+  os_port:
+    cloud: "{{ cloud_name }}"
+    state: absent
+    name: net12_port1
+
+- name: Remove net12_subnet1
+  os_subnet:
+    cloud: "{{ cloud_name }}"
+    state: absent
+    name: net12_subnet1
+
+- name: Remove network 12
+  os_network:
+    cloud: "{{ cloud_name }}"
+    state: absent
+    name: net12
