Collect /etc/resolv.conf from Lago's VMs
Will help to debug DNS issues.

Change-Id: Id40d165674b3d16a061fc9156fd65c6cfec5d4f9
Signed-off-by: gbenhaim <galbh2@gmail.com>

--- a/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
@@ -10,6 +10,7 @@ vm-common-settings: &vm-common-settings
     service_provider: systemd
     artifacts:
       - /var/log
+      - /etc/resolv.conf
 
 domains:
   lago-{{ env.suite_name }}-engine:
@@ -65,6 +66,7 @@ domains:
       - /etc/httpd
       - /etc/sysconfig
       - /etc/yum
+      - /etc/resolv.conf
 {%- for i in range(hostCount) %}
   lago-{{ env.suite_name }}-host-{{ i }}:
     <<: *vm-common-settings
