--- a/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
@@ -41,11 +41,11 @@ domains:
     metadata:
       ovirt-engine-password: 123
       deploy-scripts:
-        - $LAGO_INITFILE_PATH/../common/deploy-scripts/{{ create_local_repo|default('add_local_repo.sh') }}
+        - $LAGO_INITFILE_PATH/deploy-scripts/{{ create_local_repo|default('add_local_repo.sh') }}
         {%- if install_storage_with_lago_deploy|default(true) %}
-        - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_storage_unified_el7.sh
+        - $LAGO_INITFILE_PATH/deploy-scripts/setup_storage_unified_el7.sh
         {%- endif %}
-        - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_engine.sh
+        - $LAGO_INITFILE_PATH/deploy-scripts/setup_engine.sh
     artifacts:
       - /var/log
       - /root/fluentd
@@ -85,10 +85,10 @@ domains:
         format: qcow2
     metadata:
       deploy-scripts:
-        - $LAGO_INITFILE_PATH/../common/deploy-scripts/{{ create_local_repo|default('add_local_repo.sh') }}
-        - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_host_el7.sh
+        - $LAGO_INITFILE_PATH/deploy-scripts/{{ create_local_repo|default('add_local_repo.sh') }}
+        - $LAGO_INITFILE_PATH/deploy-scripts/setup_host_el7.sh
         {% if loop.first and install_ovirt_host|default(false) -%}
-        - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_1st_host_el7.sh
+        - $LAGO_INITFILE_PATH/deploy-scripts/setup_1st_host_el7.sh
         {%- endif %}
 {%- endfor %}
 nets:
