--- a/network-suite-master/ansible/roles/cleanup-ovn-entities/tasks/main.yml
+++ b/network-suite-master/ansible/roles/cleanup-ovn-entities/tasks/main.yml
@@ -1,7 +1,14 @@
 ---
 
 # Remove the router before removing the subnet to remove the router interfaces
-- name: Remove router0
+
+- name: Remove router router1
+  os_router:
+    cloud: "{{ cloud_name }}"
+    state: absent
+    name: router1
+
+- name: Remove router router0
   os_router:
     cloud: "{{ cloud_name }}"
     state: absent
@@ -13,13 +20,13 @@
     state: absent
     name: net10_port1
 
-- name: Remove net10_subnet1
+- name: Remove subnet net10_subnet1
   os_subnet:
     cloud: "{{ cloud_name }}"
     state: absent
     name: net10_subnet1
 
-- name: Remove network 10
+- name: Remove network net10
   os_network:
     cloud: "{{ cloud_name }}"
     state: absent
@@ -31,13 +38,13 @@
     state: absent
     name: net11_port1
 
-- name: Remove net11_subnet1
+- name: Remove subnet net11_subnet1
   os_subnet:
     cloud: "{{ cloud_name }}"
     state: absent
     name: net11_subnet1
 
-- name: Remove network 2
+- name: Remove network net11
   os_network:
     cloud: "{{ cloud_name }}"
     state: absent
@@ -49,14 +56,32 @@
     state: absent
     name: net12_port1
 
-- name: Remove net12_subnet1
+- name: Remove subnet net12_subnet1
   os_subnet:
     cloud: "{{ cloud_name }}"
     state: absent
     name: net12_subnet1
 
-- name: Remove network 12
+- name: Remove network net12
   os_network:
     cloud: "{{ cloud_name }}"
     state: absent
     name: net12
+
+- name: Remove port net14_port1
+  os_port:
+    cloud: "{{ cloud_name }}"
+    state: absent
+    name: net14_port1
+
+- name: Remove subnet net14_subnet1
+  os_subnet:
+    cloud: "{{ cloud_name }}"
+    state: absent
+    name: net14_subnet1
+
+- name: Remove network net14
+  os_network:
+    cloud: "{{ cloud_name }}"
+    state: absent
+    name: net14
