Use centos 7.5 image
Excluding the NG suites since we are going to change the
way they work soon.

Change-Id: Ice2dcd20a0785d6ecca08aa8dabdd200b9fcc053
Signed-off-by: gbenhaim <galbh2@gmail.com>

--- a/he-basic-iscsi-suite-master/vars/main.yml
+++ b/he-basic-iscsi-suite-master/vars/main.yml
@@ -1,6 +1,6 @@
 templates:
-  storage: el7.4-base-1
-  host: el7.4-base-1
+  storage: el7.5-base
+  host: el7.5-base
 hostCount: 2
 system_requirements:
   disk_space_gb: 80
