--- a/upgrade-from-prevrelease-suite-4.2/vars/main.yml
+++ b/upgrade-from-prevrelease-suite-4.2/vars/main.yml
@@ -1,6 +1,6 @@
 templates:
-  engine: el7.4-base-1
-  host: el7.4-base-1
+  engine: el7.5-base
+  host: el7.5-base
 hostCount: 1
 install_storage_with_lago_deploy: true
 install_ovirt_host: false
