--- a/stdci.yaml
+++ b/stdci.yaml
@@ -12,6 +12,7 @@ substage:
   - he-basic-iscsi_suite_4.2
   - he-basic_suite_4.2
   - he-basic_suite_master
+  - he-node-ng_suite_master
   - network_suite_4.2
   - network_suite_master
   - performance_suite_master
