Added a new he-node-ng-4.2 suite
Change-Id: Ie013e025175de673d266edc71fe00d411baf80b3
Signed-off-by: Yuval Turgeman <yturgema@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -13,6 +13,7 @@ substage:
   - he-basic_suite_4.2
   - he-basic_suite_master
   - he-node-ng_suite_master
+  - he-node-ng_suite_4.2
   - network_suite_4.2
   - network_suite_master
   - performance_suite_master
