--- a/basic-suite-4.2/vars/main.yml
+++ b/basic-suite-4.2/vars/main.yml
@@ -4,3 +4,4 @@ templates:
 hostCount: 2
 install_storage_with_lago_deploy: false
 install_ovirt_host: true
+create_local_repo: add_local_repo_no_ext_access.sh
