Adding compat suites to check-patch
- compat-suite-master is the real suite which holds all the required
  files.

- "compat-*-suite-master" are symlinks to the suite mentioned
  above. Using this method allows to having the benefits of OST (log
  collection, parallel run in CI, etc...) without duplicating the base
  suite.

- For each version, there exists a symlink in the automation dir, which
  points to "automation/compat_suite_master.sh". This script export
  the required DC version which inferred from the suite's name.

Change-Id: Id821708e9821aba795b1ea7fcd31fd6a80b698f5
Signed-off-by: gbenhaim <galbh2@gmail.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -4,6 +4,10 @@ substage:
   - ansible_suite_master
   - basic_suite_4.2
   - basic_suite_master
+  - compat-3.6_suite_master
+  - compat-4.0_suite_master
+  - compat-4.1_suite_master
+  - compat-4.2_suite_master
   - hc-basic_suite_4.2
   - hc-basic_suite_master
   - he-basic-ansible_suite_4.2
