Link yumrepos to reposync cfgs for basic suites
This will enable the generic mirror injection mechanism of STDCI. It
means that CI mirrors will be used for check-patch (and CQ) yielding
more stable testing.

This patch applies only on basic suites.

Also modified stdci.yaml so CI will test changes like this one (in
automation files without direct link from the suite itself)

Change-Id: I63e02a6f9775538c356ebd0cf426155358e4e3c5
Jira-Ticket: https://ovirt-jira.atlassian.net/browse/OVIRT-2100
Signed-off-by: Daniel Belenky <dbelenky@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -36,7 +36,9 @@ substage:
       script:
         fromfile: 'automation/basic_suite_master.sh'
 runif:
-  filechanged: '{{ substage|replace("_", "[_-]") }}*'
+  filechanged:
+    - '{{ substage|replace("_", "[_-]") }}*'
+    - 'automation/{{ substage|replace("_", "[_-]") }}*'
 script:
   fromfile: 'automation/{{ substage }}.sh'
 runtime-requirements:
