Add README to openshift-on-ovirt suite
Change-Id: If256904b2af1fa13432c9c2b6465a25132ac8e86
Signed-off-by: Roy Golan <rgolan@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -34,7 +34,7 @@ stage:
         - upgrade-from-release_suite_4.2
         - upgrade-from-prevrelease_suite_4.2
         - upgrade-from-release_suite_master
-        - openshift-on-ovirt
+        - openshift-on-ovirt_suite_4.2
         - test-ost-container:
             runif:
               filechanged: ['automation/test-ost-container*', 'run-ost-container.sh']
