--- a/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
@@ -67,6 +67,8 @@ domains:
       - /etc/sysconfig
       - /etc/yum
       - /etc/resolv.conf
+      - /tmp/ovirt*
+      - /tmp/otopi*
 {%- for i in range(hostCount) %}
   lago-{{ env.suite_name }}-host-{{ i }}:
     <<: *vm-common-settings
