Fix stdci.yaml to be able to run poll upstream sources
Change-Id: I5fa10df8a3b08efc7930d51daf6139b0cf1df22c
Signed-off-by: Galit <galfrid@gmail.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -7,7 +7,7 @@ stage:
         - ovirt-4.2-release
         - ovirt-4.1-stable
       script:
-        fromfile: 'automation/{{ stage }}_{{ substage }}.sh'
+        fromfile: 'automation/{{ stage }}.{{ substage }}.sh'
   - check-patch:
       substage:
         - dr_suite_master
