ansible-suite: Rename modules plural to singular
Change-Id: I125422095df33696462bc67ae7e43b6572278cf8
Signed-off-by: Ondra Machacek <omachace@redhat.com>

--- a/ansible-suite-master/ovirt-deploy/defaults/main.yml
+++ b/ansible-suite-master/ovirt-deploy/defaults/main.yml
@@ -12,7 +12,7 @@ quota_name: DC-QUOTA
 
 # Clusters:
 cluster_name: test-cluster
-cpu_type: Intel Conroe Family
+cpu_type: Intel Nehalem Family
 
 # Hosts:
 host_password: 123456
