--- a/common/yum-repos/ovirt-4.2-release.repo.in
+++ b/common/yum-repos/ovirt-4.2-release.repo.in
@@ -30,11 +30,18 @@ enabled = 1
 name = CentOS7 Extras
 baseurl = http://mirror.centos.org/centos/7/extras/x86_64/
 enabled = 1
+exclude = libtomcrypt
+	libtommath
+	python2-crypto
 
 [epel-el7]
 name = Extra Packages for Enterprise Linux 7 - x86_64
 baseurl = http://download.fedoraproject.org/pub/epel/7/x86_64
 enabled = 1
+exclude = collectd
+	collectd-virt
+	collectd-netlink
+	collectd-postgresql
 
 [centos-ovirt-4.2-7.5-temp-el7]
 name = CentOS-7 - oVirt 4.2 (temp virt repo)
@@ -42,6 +49,11 @@ baseurl = https://buildlogs.centos.org/centos/7/virt/x86_64/ovirt-4.2/
 gpgcheck = 0
 enabled = 1
 exclude = novnc
+	ansible
+	python2-ecdsa
+	ovirt
+	vdsm
+	otopi
 
 [centos-ovirt-4.2-el7]
 name = CentOS-7 - oVirt 4.2
@@ -68,3 +80,4 @@ baseurl = http://mirror.centos.org/centos/7/sclo/x86_64/rh
 gpgcheck = 1
 enabled = 1
 gpgkey = https://www.centos.org/keys/RPM-GPG-KEY-CentOS-SIG-SCLo
+
