--- a/common/yum-repos/ovirt-4.2.repo.in
+++ b/common/yum-repos/ovirt-4.2.repo.in
@@ -42,11 +42,18 @@ enabled = 1
 name = CentOS7 Extras
 baseurl = http://mirror.centos.org/centos/7/extras/x86_64/
 enabled = 1
+exclude = libtomcrypt
+        libtommath
+        python2-crypto
 
 [epel-el7]
 name = Extra Packages for Enterprise Linux 7 - x86_64
 baseurl = http://download.fedoraproject.org/pub/epel/7/x86_64
 enabled = 1
+exclude = collectd
+        collectd-virt
+        collectd-netlink
+        collectd-postgresql
 
 [centos-ovirt-4.2-7.5-temp-el7]
 name = CentOS-7 - oVirt 4.2 (temp virt repo)
@@ -54,6 +61,8 @@ baseurl = https://buildlogs.centos.org/centos/7/virt/x86_64/ovirt-4.2/
 gpgcheck = 0
 enabled = 1
 exclude = novnc
+        ansible
+        python2-ecdsa
 
 [centos-ovirt-4.2-el7]
 name = CentOS-7 - oVirt 4.2
