master: Add Centos CR repo to test upcoming CentOS 7.6
Change-Id: Idf9e6a5c427c398016435724c832cce8543c4f0a
Signed-off-by: Martin Perina <mperina@redhat.com>

--- a/common/yum-repos/ovirt-master.repo.in
+++ b/common/yum-repos/ovirt-master.repo.in
@@ -54,6 +54,11 @@ exclude = ansible
 	python-paramiko
 max_connections = 5
 
+[centos-cr]
+name=CentOS7 - cr
+baseurl=http://mirror.centos.org/centos/7/cr/x86_64/
+enabled=1
+
 [epel-el7]
 name = Extra Packages for Enterprise Linux 7 - x86_64
 baseurl = http://download.fedoraproject.org/pub/epel/7/x86_64
