master: dropping whitelisting of centos-ovirt-4.3 repos
As an attempt to simplify the reposync whitelisting
We want to see if its possible to remove whitelisting
for smaller repos and just use 'exclude' when needed.
Starting fom the centos ovirt 4.3 repo

Also updated template file to make sure the tool
won't override it

Change-Id: Ifa27656158f0eb4d572a8cd9645a86e0ee64e89a
Signed-off-by: Eyal Edri <eedri@redhat.com>

--- a/common/yum-repos/ovirt-master.repo.in
+++ b/common/yum-repos/ovirt-master.repo.in
@@ -79,6 +79,7 @@ name = CentOS-7 - oVirt 4.3
 baseurl = http://cbs.centos.org/repos/virt7-ovirt-43-testing/x86_64/os/
 gpgcheck = 0
 enabled = 1
+ost_skip_injection = True
 exclude = ovirt-host*
 
 [centos-ovirt-common-el7]
