master: dropping whitelist from centos-ovirt-common-el7
second patch in the series, yet another smallish repo
that we can drop whitelisting to simplify the handling
or pkgs and whitelisting. also updated template file.

This shouldn't have a major effect on speed since
its relatively a small repo.

Change-Id: Ic48c89ecfa3d2506e407cae4b3ad5c4fb7804344
Signed-off-by: Eyal Edri <eedri@redhat.com>

--- a/common/yum-repos/ovirt-master.repo.in
+++ b/common/yum-repos/ovirt-master.repo.in
@@ -88,6 +88,7 @@ baseurl = http://cbs.centos.org/repos/virt7-ovirt-common-testing/x86_64/os/
 gpgcheck = 0
 cost = 2000
 enabled = 1
+ost_skip_injection = True
 exclude = ansible
 	ansible-doc
 
